test/valid/test_all_types.csmall
int main() {
	int een = 1;
	float twee = 2;
	char drie = '3';
	return 0;
}