test/errors/wrongreturntype.csmall
int main() {
	return 1.0e1;
}